--- a/index.html
+++ b/index.html
@@ -1,50 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Will You Be My Valentine?</title>
-<style>
-  body {
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    background: #ffe6e6;
-    padding-top: 100px;
-  }
-  button {
-    font-size: 24px;
-    padding: 10px 30px;
-    margin: 20px;
-    cursor: pointer;
-    border: none;
-    border-radius: 8px;
-    transition: 0.3s;
-  }
-  #yes { background: #ff4d4d; color: white; }
-  #no { background: #ff9999; color: white; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Will You Be My Valentine?</title>
+
+  <style>
+    body {
+      font-family: "Arial", sans-serif;
+      text-align: center;
+      background: #ffe6e6;
+      padding-top: 100px;
+      transition: background 1.5s ease;
+    }
+
+    h1 {
+      font-size: 42px;
+      color: #800000;
+    }
+
+    button {
+      font-size: 24px;
+      padding: 12px 32px;
+      margin: 25px;
+      cursor: pointer;
+      border: none;
+      border-radius: 10px;
+      transition: all 0.3s ease;
+    }
+
+    #yes {
+      background: #c62828;
+      color: white;
+    }
+
+    #no {
+      background: #f28b82;
+      color: white;
+    }
+
+    #yes:hover {
+      transform: scale(1.05);
+    }
+
+    #love-message {
+      display: none;
+      margin-top: 60px;
+      animation: fadeIn 1.6s ease forwards;
+    }
+
+    #love-message h2 {
+      font-size: 36px;
+      color: #b30000;
+    }
+
+    #love-message p {
+      font-size: 20px;
+      color: #4a2c2c;
+      max-width: 520px;
+      margin: 20px auto;
+      line-height: 1.7;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-<h1>Will you be my Valentine? 💖</h1>
-<button id="yes">Yes ❤️</button>
-<button id="no">No 💔</button>
+  <h1>Will you be my Valentine? 💖</h1>
 
-<script>
-  const noBtn = document.getElementById('no');
-  const yesBtn = document.getElementById('yes');
+  <div id="buttons">
+    <button id="no">No 💔</button>
+    <button id="yes">Yes 💕</button>
+  </div>
 
-  noBtn.addEventListener('mouseenter', () => {
-    const x = Math.random() * (window.innerWidth - 200);
-    const y = Math.random() * (window.innerHeight - 200);
-    noBtn.style.position = 'absolute';
-    noBtn.style.left = x + 'px';
-    noBtn.style.top = y + 'px';
-  });
+  <div id="love-message">
+    <h2>💖 I knew you would 💖</h2>
+    <p>
+      Some choices feel inevitable only after they’re made.  
+      Thank you for choosing me — not just today, but in all the quiet moments that follow.
+    </p>
+  </div>
 
-  yesBtn.addEventListener('click', () => {
-    alert("I knew you would! 💘");
-  });
-</script>
+  <script>
+    const noBtn = document.getElementById("no");
+    const yesBtn = document.getElementById("yes");
+    const loveMessage = document.getElementById("love-message");
+    const buttons = document.getElementById("buttons");
+
+    noBtn.addEventListener("mouseenter", () => {
+      const x = Math.random() * (window.innerWidth - 150);
+      const y = Math.random() * (window.innerHeight - 150);
+      noBtn.style.position = "absolute";
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
+    });
+
+    yesBtn.addEventListener("click", () => {
+      buttons.style.display = "none";
+      document.body.style.background = "#ffd6d6";
+      loveMessage.style.display = "block";
+    });
+  </script>
 
 </body>
 </html>
