Add new text to the paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <p>
       Some choices feel inevitable only after they’re made.  
       Thank you for choosing me — not just today, but in all the quiet moments that follow.
+      Tu lagii muu bitiii
     </p>
   </div>
 
